--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!-- spring security dependency here -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!-- dependency end here -->
+
 		<!-- logger purpose dependency here -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
