--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@
 		</dependency>
 		<!-- dependency end here -->
 
+		<!-- model mapper dependency here -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		<!-- dependency end here -->
+
+
 		<!-- logger purpose dependency here -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
