--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,13 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
+# email sender properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=md.farid.ice@gmail.com
+spring.mail.password=farid@1510
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # expose all rest endpoints to actuators
 management.endpoints.web.exposure.include=*
