Email sender created.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8080
 
+#spring.datasource.url=jdbc:mysql://https://198.54.116.141:2083/sahafxyg_basinda_database
+#spring.datasource.username=sahafxyg_basinda
+#spring.datasource.password=basinda@1510
+
 spring.datasource.url=jdbc:mysql://localhost:3306/basinda
 spring.datasource.username=root
 spring.datasource.password=farid@1510
@@ -10,9 +14,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # email sender properties
 spring.mail.host=smtp.gmail.com
+spring.mail.protocol=smtp
 spring.mail.port=587
-spring.mail.username=md.farid.ice@gmail.com
-spring.mail.password=farid@1510
+spring.mail.username=habu.kha21@gmail.com
+spring.mail.password=dahtawjgiyhxkzel
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
