crash code removed and database properties correction.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=8080
 #spring.datasource.username=sahafxyg_basinda
 #spring.datasource.password=basinda@1510
 
-spring.datasource.url=jdbc:mysql://localhost:3306/basinda
+spring.datasource.url=jdbc:mysql://root:yfVTOJ6uV3Ra8DMMbKic@containers-us-west-47.railway.app:7618/railway
 spring.datasource.username=root
-spring.datasource.password=farid@1510
+spring.datasource.password=yfVTOJ6uV3Ra8DMMbKic
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
