--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,27 @@
 		</dependency>
 		<!-- dependency end here -->
 
+		<!-- jwt implementation dependency here-->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- jwt implementation dependency end here-->
 
 		<!-- logger purpose dependency here -->
 		<dependency>
