--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.datasource.url=jdbc:mysql://root:yfVTOJ6uV3Ra8DMMbKic@containers-us-west-
 spring.datasource.username=root
 spring.datasource.password=yfVTOJ6uV3Ra8DMMbKic
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.format_sql=true
 
 # email sender properties
 spring.mail.host=smtp.gmail.com
