--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 server.port=8080
 
 #dev
-#spring.datasource.url=jdbc:mysql://localhost:3306/basinda
-#spring.datasource.username=root
-#spring.datasource.password=farid@1510
+spring.datasource.url=jdbc:mysql://localhost:3306/basinda
+spring.datasource.username=root
+spring.datasource.password=farid@1510
 
 #production
-spring.datasource.url=jdbc:mysql://root:yfVTOJ6uV3Ra8DMMbKic@containers-us-west-47.railway.app:7618/railway
-spring.datasource.username=root
-spring.datasource.password=yfVTOJ6uV3Ra8DMMbKic
+#spring.datasource.url=jdbc:mysql://root:yfVTOJ6uV3Ra8DMMbKic@containers-us-west-47.railway.app:7618/railway
+#spring.datasource.username=root
+#spring.datasource.password=yfVTOJ6uV3Ra8DMMbKic
 
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # email sender properties
 spring.mail.host=smtp.gmail.com
@@ -22,6 +22,9 @@ spring.mail.username=habu.kha21@gmail.com
 spring.mail.password=dahtawjgiyhxkzel
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# firebase push notification related properties
+gcp.firebase.service-account=classpath:basinda-push-notification-firebase.json
 
 # expose all rest endpoints to actuators
 management.endpoints.web.exposure.include=*
