--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-server.port=8080
+#server.port=8080
 
 #dev
-spring.datasource.url=jdbc:mysql://localhost:3306/basinda
-spring.datasource.username=root
-spring.datasource.password=farid@1510
+#spring.datasource.url=jdbc:mysql://localhost:3306/basinda
+#spring.datasource.username=root
+#spring.datasource.password=farid@1510
 
 #production
-#spring.datasource.url=jdbc:mysql://root:yfVTOJ6uV3Ra8DMMbKic@containers-us-west-47.railway.app:7618/railway
-#spring.datasource.username=root
-#spring.datasource.password=yfVTOJ6uV3Ra8DMMbKic
+spring.datasource.url=jdbc:mysql://root:5BznzNz6ExurRnWfDIwT@containers-us-west-96.railway.app:6617/railway
+spring.datasource.username=root
+spring.datasource.password=5BznzNz6ExurRnWfDIwT
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.format_sql=true
 
 # email sender properties
 spring.mail.host=smtp.gmail.com
