flat creation api fixed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.datasource.password=farid@1510
 #spring.datasource.username=root
 #spring.datasource.password=5BznzNz6ExurRnWfDIwT
 
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # email sender properties
 spring.mail.host=smtp.gmail.com
