--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-server.port=8080
+#server.port=8080
 
 #dev
-spring.datasource.url=jdbc:mysql://localhost:3306/basinda
-spring.datasource.username=root
-spring.datasource.password=farid@1510
+#spring.datasource.url=jdbc:mysql://localhost:3306/basinda
+#spring.datasource.username=root
+#spring.datasource.password=farid@1510
 
 #production
-#spring.datasource.url=jdbc:mysql://root:5BznzNz6ExurRnWfDIwT@containers-us-west-96.railway.app:6617/railway
-#spring.datasource.username=root
-#spring.datasource.password=5BznzNz6ExurRnWfDIwT
+spring.datasource.url=jdbc:mysql://root:5BznzNz6ExurRnWfDIwT@containers-us-west-96.railway.app:6617/railway
+spring.datasource.username=root
+spring.datasource.password=5BznzNz6ExurRnWfDIwT
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 # email sender properties
